# kaggle

./: .gitignore  pyproject.toml
competitions/titanic/code/: generate_submission.py  run.py
competitions/titanic/submissions/: 20230715204614_submission.csv  20230715230631_submission.csv  20230715231013_submission.csv  20230715231735_submission.csv  20230715232833_submission.csv  20230715233449_submission.csv  20230715233647_submission.csv
shared/: basic_hyper_model.py  state_store.py
