[tool.poetry]
name = "kagcomp"
version = "0.1.0"
description = ""
authors = ["Max Buck <maxbuckdeveloper@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
kaggle = "^1.5.15"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
