[tool.poetry]
name = "kagcomp"
version = "0.1.0"
description = ""
authors = ["Max Buck <maxbuckdeveloper@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
kaggle = "^1.5.15"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
tensorflow = "^2.13.0"
keras-tuner = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
